database: ajout des tables agents et logiciels

--- a/database/lgpi.properties
+++ b/database/lgpi.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Thu May 07 11:54:55 CEST 2015
+#Thu May 07 12:21:31 CEST 2015
 version=2.3.2
-modified=no
+modified=yes
