--- a/database/lgpi.properties
+++ b/database/lgpi.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Sat May 09 11:06:52 CEST 2015
+#Tue May 12 01:09:17 CEST 2015
 version=2.3.2
-modified=no
+modified=yes
