--- a/config.properties
+++ b/config.properties
@@ -1,9 +1,7 @@
-#tableau
-tableau_limite=no
-tableau_nb_ligne=100
-#parametres server mail
-#databases
+#Sat May 16 18:30:32 CEST 2015
+tableau_limite=yes
+tableau_nb_ligne=20
 db_driver=org.hsqldb.jdbcDriver
-db_location=jdbc:hsqldb:file:database/lgpi
-db_user=lgpi
+db_location=jdbc\:hsqldb\:file\:database/lgpi
 db_password=lgpi
+db_user=lgpi
