--- a/database/lgpi.properties
+++ b/database/lgpi.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.2
-#Sun May 17 17:35:29 CEST 2015
+#Sun May 17 20:26:53 CEST 2015
 version=2.3.2
-modified=no
+modified=yes
