--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
-#Mon May 18 09:38:15 CEST 2015
-tableau_limite=yes
+#Tue May 19 08:18:35 CEST 2015
+tableau_limite=no
 tableau_nb_ligne=5
 db_driver=org.hsqldb.jdbcDriver
 db_location=jdbc\:hsqldb\:file\:database/lgpi
