--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
-#Sun Jun 14 10:29:45 CEST 2015
-tableau_limite=no
-tableau_nb_ligne=5
+#Fri Jun 26 10:40:38 CEST 2015
+tableau_limite=yes
+tableau_nb_ligne=1
 db_driver=org.hsqldb.jdbcDriver
 db_location=jdbc\:hsqldb\:file\:database/lgpi
 db_password=lgpi
