--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
-#Fri Jun 26 10:40:38 CEST 2015
+#Wed Jul 01 21:37:15 CEST 2015
 tableau_limite=yes
 tableau_nb_ligne=1
 db_driver=org.hsqldb.jdbcDriver
-db_location=jdbc\:hsqldb\:file\:database/lgpi
+db_location=jdbc\:hsqldb\:file\:database/gpi
 db_password=lgpi
 db_user=lgpi
