bouton nouvel agent dans ajout equipement inutile

--- a/config.properties
+++ b/config.properties
@@ -2,6 +2,6 @@
 tableau_limite=yes
 tableau_nb_ligne=1
 db_driver=org.hsqldb.jdbcDriver
-db_location=jdbc\:hsqldb\:file\:database/gpi
+db_location=jdbc\:hsqldb\:file\:database/lgpi
 db_password=lgpi
 db_user=lgpi
