--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,5 @@
 #Wed Jul 01 21:37:15 CEST 2015
-tableau_limite=yes
-tableau_nb_ligne=1
-db_driver=org.hsqldb.jdbcDriver
-db_location=jdbc\:hsqldb\:file\:database/lgpi
-db_password=lgpi
-db_user=lgpi
+javax.persistence.jdbc.driver=org.hsqldb.jdbcDriver
+javax.persistence.jdbc.url=jdbc:hsqldb:file:database/lgpi
+javax.persistence.jdbc.user=lgpi
+javax.persistence.jdbc.password=lgpi
