prise en compte conf bdd avec retour vers conf par defaut

--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
-#Wed Jul 01 21:37:15 CEST 2015
+#Wed Jul 08 00:44:30 CEST 2015
 javax.persistence.jdbc.driver=org.hsqldb.jdbcDriver
-javax.persistence.jdbc.url=jdbc:hsqldb:file:database/lgpi
-javax.persistence.jdbc.user=lgpi
 javax.persistence.jdbc.password=lgpi
+javax.persistence.jdbc.url=jdbc\:hsqldb\:file\:database/lgpi
+javax.persistence.jdbc.user=lgpi
